<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="rootFreeSpace"
            type="Long" />

        <variable
            name="rootTotalSpace"
            type="Long" />

        <variable
            name="imageSize"
            type="Long" />

        <variable
            name="videoSize"
            type="Long" />

        <variable
            name="audioSize"
            type="Long" />

        <variable
            name="documentSize"
            type="Long" />

        <variable
            name="others"
            type="Long" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_root_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_space_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="36sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:setSpaceFree="@{rootFreeSpace}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="23 GB" />

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/prs_usage_vale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:setProgressIndicator="@{rootTotalSpace - rootFreeSpace}"
                    app:setRootProgressMax="@{rootTotalSpace}"
                    app:layout_constraintStart_toStartOf="@id/tv_space_value"
                    app:layout_constraintTop_toBottomOf="@id/tv_space_value"
                    app:trackCornerRadius="24dp"
                    app:trackColor="@color/purple_200"
                    app:indicatorColor="@color/purple_500"
                    app:trackThickness="24dp" />

                <TextView
                    android:id="@+id/total_space"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:setSpaceTotal="@{rootTotalSpace}"
                    app:layout_constraintStart_toStartOf="@id/prs_usage_vale"
                    app:layout_constraintTop_toBottomOf="@id/prs_usage_vale"
                    tools:text="Total storage: 64 GB" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/container_image_usage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:elevation="24dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintStart_toStartOf="@id/container_root_info"
                app:layout_constraintTop_toBottomOf="@id/container_root_info">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="20dp">

                    <TextView
                        android:id="@+id/tv_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_images_label"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_image_usage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@id/tv_image"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_image"
                        app:setSpaceUsage="@{imageSize}"
                        tools:text="20 GB" />

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:id="@+id/prs_image_usage"
                        app:setProgressMax="@{rootTotalSpace}"
                        app:setProgressIndicator="@{imageSize}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingHorizontal="8dp"
                        app:indicatorColor="@color/yellow"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_image"
                        app:trackColor="@color/yellow_alpha05"
                        app:trackCornerRadius="24dp"
                        app:trackThickness="12dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/container_video_usage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:elevation="12dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintStart_toStartOf="@id/container_image_usage"
                app:layout_constraintTop_toBottomOf="@id/container_image_usage">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="20dp">

                    <TextView
                        android:id="@+id/tv_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_videos_label"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_video_usage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@id/tv_video"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_video"
                        app:setSpaceUsage="@{videoSize}"
                        tools:text="20 GB" />

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:id="@+id/prs_video_usage"
                        app:setProgressMax="@{rootTotalSpace}"
                        app:setProgressIndicator="@{videoSize}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_video"
                        android:layout_marginTop="8dp"
                        android:paddingHorizontal="8dp"
                        app:indicatorColor="@color/blue"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_video"
                        app:trackColor="@color/blue_alpha05"
                        app:trackCornerRadius="24dp"
                        app:trackThickness="12dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/container_audio_usage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:elevation="24dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintStart_toStartOf="@id/container_video_usage"
                app:layout_constraintTop_toBottomOf="@id/container_video_usage">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="20dp">

                    <TextView
                        android:id="@+id/tv_audio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_audios_label"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_audio_usage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@id/tv_audio"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_audio"
                        app:setSpaceUsage="@{audioSize}"
                        tools:text="20 GB" />

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:id="@+id/prs_audio_usage"
                        app:setProgressIndicator="@{audioSize}"
                        app:setProgressMax="@{rootTotalSpace}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingHorizontal="8dp"
                        app:indicatorColor="@color/orange"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_audio"
                        app:trackColor="@color/orange_alpha05"
                        app:trackCornerRadius="24dp"
                        app:trackThickness="12dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/container_document_usage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:elevation="24dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintStart_toStartOf="@id/container_audio_usage"
                app:layout_constraintTop_toBottomOf="@id/container_audio_usage">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="20dp">

                    <TextView
                        android:id="@+id/tv_document"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_documents_label"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_document_usage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@id/tv_document"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_document"
                        app:setSpaceUsage="@{documentSize}"
                        tools:text="20 GB" />

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:id="@+id/prs_document_usage"
                        app:setProgressMax="@{rootTotalSpace}"
                        app:setProgressIndicator="@{documentSize}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingHorizontal="8dp"
                        app:indicatorColor="@color/green"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_document"
                        app:trackColor="@color/green_alpha05"
                        app:trackCornerRadius="24dp"
                        app:trackThickness="12dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/container_other_usage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:elevation="24dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/container_document_usage"
                app:layout_constraintTop_toBottomOf="@id/container_document_usage"
                app:layout_constraintVertical_bias="0.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="20dp">

                    <TextView
                        android:id="@+id/tv_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_others_label"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_other_usage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@id/tv_other"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_other"
                        app:setSpaceUsage="@{others}"
                        tools:text="20 GB" />

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:id="@+id/others_progressbar"
                        app:setProgressMax="@{rootTotalSpace}"
                        app:setProgressIndicator="@{others}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingHorizontal="8dp"
                        app:indicatorColor="@color/violet"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_other"
                        app:trackColor="@color/violet_alpha05"
                        app:trackCornerRadius="24dp"
                        app:trackThickness="12dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>